[gd_scene load_steps=26 format=2]

[ext_resource path="res://ui/Lobby_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/Chat_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://media/sounds/SFX/Beep/2/1.wav" type="AudioStream" id=3]
[ext_resource path="res://media/fonts/base_font_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://media/fonts/conthrax-sb.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://media/sounds/SFX/Beep/2/2.wav" type="AudioStream" id=6]
[ext_resource path="res://media/sounds/SFX/Beep/1/1.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.152941, 0.152941, 0.290196 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.160784, 0.152941, 0.152941, 0.290196 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.27451, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 1, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.278431, 0.227451, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.184314, 0.176471, 0.176471, 1 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0.862745, 0.819608, 0.176471, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.168627, 0.164706, 0.121569, 0.635294 )

[sub_resource type="DynamicFont" id=10]
size = 20
outline_size = 1
outline_color = Color( 0.235294, 0.45098, 0.298039, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
outline_size = 1
outline_color = Color( 0.262745, 0.556863, 0.552941, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 20
outline_size = 1
outline_color = Color( 0.360784, 0.352941, 0.25098, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.160784, 0.152941, 0.152941, 0.290196 )

[sub_resource type="DynamicFont" id=17]
outline_color = Color( 0.862745, 0.819608, 0.176471, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=18]
size = 14
outline_color = Color( 0.862745, 0.819608, 0.176471, 1 )
font_data = ExtResource( 5 )

[node name="Lobby_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_panel" type="Panel" parent="."]
margin_left = 806.811
margin_top = 78.8108
margin_right = 1000.81
margin_bottom = 406.811
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Game_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 12.3471
margin_right = 49.0
margin_bottom = 93.3471
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Single_player_button" type="Button" parent="Game_panel"]
margin_left = 19.0
margin_top = 69.0
margin_right = 167.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Solo Game"

[node name="HSeparator" type="HSeparator" parent="Game_panel"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 3.0
margin_top = 46.0
margin_right = 190.0
margin_bottom = 62.0

[node name="HSeparator2" type="HSeparator" parent="Game_panel"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 3.94385
margin_top = 269.698
margin_right = 190.944
margin_bottom = 285.698

[node name="HSeparator3" type="HSeparator" parent="Game_panel"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 3.94385
margin_top = 269.698
margin_right = 190.944
margin_bottom = 285.698

[node name="Settings_panel" type="Panel" parent="."]
margin_left = 28.3674
margin_top = 80.0
margin_right = 386.367
margin_bottom = 410.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.0
margin_right = 159.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
text = "Player Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username_edit" type="LineEdit" parent="Settings_panel"]
margin_left = 43.5136
margin_top = 87.892
margin_right = 313.514
margin_bottom = 117.892
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
placeholder_text = "enter your username"
placeholder_alpha = 0.197
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username_label" type="Label" parent="Settings_panel"]
margin_left = 99.4987
margin_top = 53.9749
margin_right = 235.499
margin_bottom = 78.9749
custom_fonts/font = SubResource( 8 )
text = "Username"

[node name="Label2" type="Label" parent="Settings_panel"]
margin_left = 510.0
margin_top = 134.0
margin_right = 550.0
margin_bottom = 148.0

[node name="Panel" type="Panel" parent="Settings_panel"]
margin_left = 72.0
margin_top = 174.0
margin_right = 294.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="Settings_panel"]
margin_left = 28.541
margin_top = 177.191
margin_right = 321.541
margin_bottom = 208.191
focus_mode = 2
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "text"
items = [ "Pea Shooter", null, 0, false, false, 0, 0, null, "", false, "Blooper", null, 0, false, false, 1, 0, null, "", false, "Sparkle Gun", null, 0, false, false, 2, 0, null, "", false, "Buzz Saw", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_label2" type="Label" parent="Settings_panel"]
margin_left = 35.1904
margin_top = 137.948
margin_right = 309.19
margin_bottom = 162.948
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 13 )
text = "Choose Starting Item"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Settings_panel"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 2.0
margin_top = 118.0
margin_right = 356.0
margin_bottom = 138.0

[node name="HSeparator2" type="HSeparator" parent="Settings_panel"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 2.0
margin_top = 34.9391
margin_right = 356.0
margin_bottom = 54.9391

[node name="Players_panel" type="Panel" parent="."]
visible = false
margin_left = 410.494
margin_top = 80.0
margin_right = 768.494
margin_bottom = 410.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players_panel"]
margin_left = 77.4499
margin_top = 3.3674
margin_right = 251.45
margin_bottom = 84.3674
custom_fonts/font = ExtResource( 4 )
text = "Players
"

[node name="ItemList" type="ItemList" parent="Players_panel"]
margin_left = 71.0
margin_top = 88.0
margin_right = 285.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 14 )

[node name="Quit_button" type="Button" parent="."]
margin_left = 877.597
margin_top = 363.18
margin_right = 942.597
margin_bottom = 397.18
custom_fonts/font = SubResource( 15 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_settings" type="Panel" parent="."]
margin_left = 425.0
margin_top = 80.0
margin_right = 764.0
margin_bottom = 585.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Game_settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.0
margin_right = 159.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
text = "Game Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_1_button" type="Button" parent="Game_settings"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 680.467
margin_top = -194.557
margin_right = 826.468
margin_bottom = -149.557
custom_fonts/font = ExtResource( 4 )
text = "test 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_2_button" type="Button" parent="Game_settings"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 517.468
margin_top = -194.557
margin_right = 680.467
margin_bottom = -149.557
custom_fonts/font = ExtResource( 4 )
text = "test 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_3_button" type="Button" parent="Game_settings"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 680.467
margin_top = -394.398
margin_right = 843.467
margin_bottom = -349.398
custom_fonts/font = ExtResource( 4 )
text = "test 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_3_button2" type="Button" parent="Game_settings"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 856.467
margin_top = -394.398
margin_right = 1020.47
margin_bottom = -349.398
custom_fonts/font = ExtResource( 4 )
text = "test 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_3_button3" type="Button" parent="Game_settings"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 680.467
margin_top = -334.398
margin_right = 844.467
margin_bottom = -289.398
custom_fonts/font = ExtResource( 4 )
text = "test 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_3_button4" type="Button" parent="Game_settings"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 856.467
margin_top = -334.398
margin_right = 1020.47
margin_bottom = -289.398
custom_fonts/font = ExtResource( 4 )
text = "test 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro_button" type="Button" parent="Game_settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.9436
margin_top = -340.151
margin_right = 178.944
margin_bottom = -295.151
custom_fonts/font = ExtResource( 4 )
text = "Intro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hub_button2" type="Button" parent="Game_settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.2784
margin_top = -285.423
margin_right = 180.279
margin_bottom = -240.423
custom_fonts/font = ExtResource( 4 )
text = "Hub"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_label" type="Label" parent="Game_settings"]
margin_left = 162.031
margin_top = 118.61
margin_right = 202.031
margin_bottom = 138.61
custom_fonts/font = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_label2" type="Label" parent="Game_settings"]
margin_left = 13.3795
margin_top = 117.421
margin_right = 148.379
margin_bottom = 134.421
custom_fonts/font = SubResource( 18 )
text = "Level selected:"

[node name="HSeparator2" type="HSeparator" parent="Game_settings"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = -0.632599
margin_top = 42.0
margin_right = 337.367
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="Game_settings"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 0.31131
margin_top = 100.52
margin_right = 338.311
margin_bottom = 120.52
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator4" type="HSeparator" parent="Game_settings"]
modulate = Color( 0.372549, 0.392157, 0.415686, 0.835294 )
margin_left = 0.31131
margin_top = 138.275
margin_right = 338.311
margin_bottom = 158.275
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat_box" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = -0.148438
anchor_top = 0.02
anchor_right = 0.252563
anchor_bottom = 1.066
margin_left = 192.0
margin_top = 38.0
margin_right = 113.376
margin_bottom = -106.6

[node name="select_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 15.802

[node name="select_sound2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 5.926

[node name="start_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 15.802

[connection signal="pressed" from="Game_panel/Single_player_button" to="." method="_on_Single_player_button_pressed"]
[connection signal="text_changed" from="Settings_panel/Username_edit" to="." method="_on_Username_edit_text_changed"]
[connection signal="pressed" from="Quit_button" to="." method="_on_Quit_button_pressed"]
[connection signal="pressed" from="Game_settings/level_1_button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Game_settings/level_2_button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Game_settings/level_3_button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="Game_settings/level_3_button2" to="." method="_on_level_3_button2_pressed"]
[connection signal="pressed" from="Game_settings/level_3_button3" to="." method="_on_level_3_button3_pressed"]
[connection signal="pressed" from="Game_settings/level_3_button4" to="." method="_on_level_3_button4_pressed"]
[connection signal="pressed" from="Game_settings/intro_button" to="." method="_on_intro_button_pressed"]
[connection signal="pressed" from="Game_settings/hub_button2" to="." method="_on_hub_button2_pressed"]
